# RapidGigs

./: .gitignore  ARCHITECTURE.md  CRAWLER_EXAMPLES.md  CRAWLER_GUIDE.md  CRAWLER_SETUP.md  CRAWLER_SUMMARY.md  FILE_REFERENCE.md  INDEX.md  QUICKSTART.md  README.md  VEOAIFREE_SETUP.md  VEOAIFREE_TEST.md  crawler-quickstart.sh  crawler_api_postman.json  docker-compose.yml  modal_helios.py  package-lock.json  package.json  rapidgig_postman_collection.json  tailwind.config.js
ai-services/helios/: Dockerfile  generator.py  main.py  requirements.txt  setup.bat  start.bat
backend/: .dockerignore  Dockerfile  package-lock.json  package.json  setup-dev.sh  start.sh  test-pipeline.js  testVideoGen.ts  tsconfig.json
backend/src/: server.ts  test-gen.ts  test-providers.ts  test-qwen.ts  test-veo.ts
frontend/: .dockerignore  App.tsx  Dockerfile  constants.tsx  dangling.txt  fsck.txt  index.css  index.html  index.tsx  metadata.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsc-errors.txt  tsc-output-utf8.txt  tsc-output.txt  tsconfig.json  types.ts  vite.config.ts
frontend/components/: AuthPage.tsx  MainApplication.tsx
metaai-sdk/: README.md  pyproject.toml  refresh_guide.md  requirements.txt
metaai-sdk/api/: server.py
metaai-sdk/src/metaai_sdk/: __init__.py  client.py  exceptions.py  image.py  utils.py  video.py
n8n/: README.md
rapidgig-backend/: .env.test  jest.config.js  migrate.ts  package-lock.json  package.json
rapidgig-frontend/: index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: dev.sh
(+220 files in other folders)
